test react typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,24 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    //"moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["@emotion/react/types/css-prop"],
+    "jsxImportSource": "@emotion/react",
+    "baseUrl": ".",
+    "allowImportingTsExtensions": true,
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ],
+      "@com/*": ["./src/components/*"]
+    },
   },
   "include": [
-    "src"
+    "./src/**/*"
   ]
 }
